# squash

./: .bandit  .gitignore  .semgrep.yml  AUDIT_BASELINE.md  CHANGELOG.md  CLAUDE.md  CNAME  Dockerfile  KONJO_PROMPT.md  PLAN.md  README.md  SQUASH_MASTER_PLAN.md  TIER_MAP.md  action.yml  artifacthub-repo.yml  fly.toml  pyproject.toml
.claude/agents/: researcher.md
.claude/commands/: konjo.md
.claude/hooks/: on-stop.sh
.claude/rules/: benchmarking.md  git-workflow.md  python-conventions.md  security.md  testing.md
.claude/skills/konjo-boot/: SKILL.md
.claude/skills/konjo-ship/: SKILL.md
.github/workflows/: build-wheel.yml  ci.yml  deploy-hf-space.yml  deploy.yml  konjo-gate.yml  nightly.yml  pages.yml  publish-helm.yml  publish-image.yml  publish-orb.yml  publish.yml
dashboard/: CHANGELOG.md  CLAUDE.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
dashboard/src/: App.tsx  index.css
dashboard/src/lib/: api.ts  dates.test.ts  dates.ts  mock.test.ts  mock.ts  types.ts
dashboard/src/views/: CertificateBadge.tsx  ExecutiveSummary.test.tsx  ExecutiveSummary.tsx  FindingsList.test.tsx  FindingsList.tsx  InsurancePreview.tsx  RegulatoryTimeline.test.tsx  RegulatoryTimeline.tsx  ScanFlow.test.tsx  ScanFlow.tsx
demo/: __init__.py  demo.py  index.html  ollama_scan.py  quick_check.py  remediation.py  result.html  server.py  tui.py
demo/sample_corpus/: faq.md
demo/sample_corpus_poisoned/: .rag_manifest.json  faq.md  policy.md  rogue.txt  sources.txt
demo/sample_models/legacy-pickle/: config.json  pytorch_model.pkl
demo/sample_models/safe-distilbert/: config.json  model.safetensors
demo/sample_policies/: 01_privacy_policy.txt  02_terms_of_service.txt  03_gdpr_dpa.txt  04_ccpa_notice.txt  05_cookie_policy.txt  README.md  ai_acceptable_use.txt  ccpa_basic.txt  gdpr_strong.txt  soc2_summary.md  weak_policy.txt
docs/launch/: design-partner-outreach.md  devto-article.md  hn-post.md
integrations/aws-apigw-authorizer/: README.md
integrations/azure-devops/: vss-extension.json
integrations/azure-devops/SquashAttestTask/: run_squash.ps1  run_squash.sh  task.json
integrations/circleci/: orb.yml
integrations/gitlab-ci/: squash.gitlab-ci.yml
integrations/jenkins/vars/: squashAttest.groovy
integrations/kong/: README.md
integrations/kubernetes-helm/: Chart.yaml  values.yaml
integrations/kubernetes-helm/templates/: _helpers.tpl  deployment.yaml  service.yaml  serviceaccount.yaml  validatingwebhookconfiguration.yaml
integrations/terraform/: .gitignore  Makefile  README.md  go.mod  main.go
integrations/terraform/docs/: index.md
integrations/terraform/docs/data-sources/: compliance_score.md
integrations/terraform/docs/resources/: attestation.md  policy_check.md
integrations/terraform/examples/basic/: main.tf
integrations/terraform/examples/data-source-gate/: main.tf
integrations/terraform/examples/multi-model-gate/: main.tf
integrations/terraform/internal/provider/: attestation_resource.go  compliance_data_source.go  policy_check_resource.go  provider.go  provider_test.go  types.go
integrations/terraform/internal/squashcli/: record.go  runner.go  runner_test.go
integrations/terraform/pulumi/: README.md
integrations/terraform/pulumi/examples/python/: __main__.py
integrations/terraform/pulumi/examples/typescript/: index.ts
scripts/: coverage_baseline.sh
spaces/squash-scanner/: README.md  app.py  requirements.txt
squash/: __init__.py  _canonical.py  _clock.py  _ids.py  adapter_scanner.py  agent_audit.py  agentic.py  agentic_checks.py  anchor.py  annex_iv_generator.py  annual_review.py  api.py  approval_workflow.py  artifact_extractor.py  asset_registry.py  attest.py  attestation_registry.py  audit_sim.py  auth.py  benchmark.py  bias_audit.py  billing.py  board_report.py  canon.py  carbon_attest.py  chain_attest.py  cicd.py  clause_remediation.py  cli.py  clock.py  cloud_db.py  code_scanner_ast.py  compliance_matrix.py  copyright.py  dashboard.py  data_lineage.py  data_poison.py  demo_report.py  deprecation_watch.py  drift_certificate.py  (+52 more)
squash/alerts/: __init__.py  rules.py
squash/analysis/: __init__.py  clustering.py
squash/compliance/: __init__.py  scanner.py
squash/contracts/: __init__.py  diff.py  obligations.py
squash/integrations/: aws_iam.py  azure_ad.py  azure_devops.py  gateway.py  gitops.py  huggingface.py  kubernetes.py  langchain.py  mlflow.py  okta.py  ray.py  sagemaker.py  vertex_ai.py  wandb.py
squash/routes/: __init__.py  alerts.py  compliance.py  contracts.py  trends.py
squash/templates/: annex_iv_branded.css
tests/: test_agentic.py  test_alert_rules.py  test_anchor.py  test_benchmark.py  test_canon_compat.py  test_clause_clustering.py  test_clock.py  test_compliance_scanner.py  test_contract_diff.py  test_contract_obligations.py  test_data_poison.py  test_drift_certificate.py  test_freeze.py  test_hallucination_attest.py  test_hallucination_monitor.py  test_identity_governor.py  test_ids.py  test_license_conflict.py  test_phase_g.py  test_phase_g_concurrency.py  test_phase_g_edge.py  test_phase_g_negative.py  test_phase_g_property.py  test_phase_g_security.py  test_phase_g_snapshot.py  test_regulatory_watch.py  test_reproducibility.py  test_routes_compliance_trends.py  test_squash_api.py  test_squash_attest.py  test_squash_b5_gateway.py  test_squash_b8_adapter.py  test_squash_c1_freeze.py  test_squash_c3_approval.py  test_squash_c6_insurance.py  test_squash_c8_deprecation.py  test_squash_c9_carbon.py  test_squash_chat.py  test_squash_d1_github_app.py  test_squash_d3_procurement.py  (+129 more)
tests/fuzz/: fuzz_canon.py  fuzz_input_manifest.py
vscode-extension/: package.json
vscode-extension/src/: extension.ts
website/: package-lock.json  package.json  tailwind.config.ts  vercel.json
website/public/: CNAME
website/src/app/: globals.css  layout.tsx  page.tsx
website/src/components/: AnimatedCounter.tsx  Countdown.tsx  FAQAccordion.tsx  IntegrationTabs.tsx  ScrollReveal.tsx  TypingTerminal.tsx
