[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "squash-ai"
version = "0.9.14"
description = "Automated EU AI Act compliance for ML teams — CI/CD-native, open-core, developer-first"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
keywords = [
    "eu-ai-act", "ai-compliance", "sbom", "mlbom", "cyclonedx", "spdx",
    "slsa", "sigstore", "model-signing", "ai-governance", "mlops",
    "annex-iv", "nist-ai-rmf", "policy-as-code",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "starlette>=0.37",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
]
signing = [
    # Ed25519 offline signing + air-gapped mode
    "cryptography>=42.0",
    # Optional: keyless Sigstore signing via Rekor transparency log
    # pip install sigstore
]
sbom = [
    # CycloneDX 1.7 ML-BOM generation + schema validation
    "cyclonedx-python-lib>=7.0",
]
integrations = [
    "mlflow>=2.0",
    "wandb>=0.16",
    "huggingface-hub>=0.23",
    "langchain-core>=0.1",
    "boto3>=1.34",         # SageMaker
    "google-cloud-aiplatform>=1.50",  # Vertex AI
    "ray[serve]>=2.0",
    "kubernetes>=29.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-timeout>=2.3",
    "ruff>=0.4",
    "mypy>=1.10",
    "httpx>=0.27",
]
all = [
    "squash-ai[api,signing,sbom,integrations]",
]

[project.scripts]
squash = "squash.cli:main"

[project.urls]
Homepage = "https://getsquash.dev"
Repository = "https://github.com/konjoai/squash"
Documentation = "https://docs.getsquash.dev"
"Bug Tracker" = "https://github.com/konjoai/squash/issues"
Changelog = "https://github.com/konjoai/squash/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["squash*"]

[tool.setuptools.package-data]
squash = ["data/*.json", "integrations/circleci/*.yml", "integrations/kubernetes_helm/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 120
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
