[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "squash-ai"
version = "2.7.0"
description = "Squash violations, not velocity. Automated EU AI Act compliance for ML teams — CI/CD-native, open-core, developer-first."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
keywords = [
    "eu-ai-act", "ai-compliance", "sbom", "mlbom", "cyclonedx", "spdx",
    "slsa", "sigstore", "model-signing", "ai-governance", "mlops",
    "annex-iv", "nist-ai-rmf", "policy-as-code", "owasp-llm",
    "compliance-automation", "model-attestation",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Operating System :: OS Independent",
]
dependencies = [
    "starlette>=0.37",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
]
signing = [
    "cryptography>=42.0",
]
sbom = [
    "cyclonedx-python-lib>=7.0",
]
notifications = [
    # No hard deps — urllib.request is stdlib; Slack/Teams via HTTP
]
billing = [
    "stripe>=8.0",
]
integrations = [
    "mlflow>=2.0",
    "wandb>=0.16",
    "huggingface-hub>=0.23",
    "langchain-core>=0.1",
    "boto3>=1.34",
    "google-cloud-aiplatform>=1.50",
    "ray[serve]>=2.0",
    "kubernetes>=29.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-timeout>=2.3",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "httpx>=0.27",
]
# Phase G — Bulletproof Edition test/audit toolchain (see SQUASH_MASTER_PLAN.md)
audit = [
    "coverage[toml]>=7.4",
    "mutmut>=2.5",
    "radon>=6.0",
    "hypothesis>=6.100",
    "atheris>=2.3; python_version<'3.13'",
    "bandit>=1.7",
    "semgrep>=1.60",
    "pip-audit>=2.7",
    "rfc8785>=0.1.2",
]
all = [
    "squash-ai[api,signing,sbom,billing,integrations]",
]

[project.scripts]
squash = "squash.cli:main"

[project.urls]
Homepage = "https://getsquash.dev"
Repository = "https://github.com/konjoai/squash"
Documentation = "https://docs.getsquash.dev"
"Bug Tracker" = "https://github.com/konjoai/squash/issues"
Changelog = "https://github.com/konjoai/squash/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["squash*"]

[tool.setuptools.package-data]
squash = [
    "data/*.json",
    "integrations/circleci/*.yml",
    "integrations/kubernetes_helm/**/*",
    "py.typed",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 120
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Phase G — Bulletproof Edition — coverage + mutation gates
# Tier definitions live in TIER_MAP.md; baseline findings in AUDIT_BASELINE.md.
# CI is wired in Phase 5 to fail on regression below these thresholds.
# ---------------------------------------------------------------------------

[tool.coverage.run]
branch = true
source = ["squash"]
parallel = true
relative_files = true
omit = [
    "squash/data/*",
    "squash/templates/*",
    "squash/__init__.py",
    "*/tests/*",
]

[tool.coverage.report]
# Phase 1 (this sprint): record_only — no thresholds enforced yet.
# Phase 4 graduation: bump to the per-tier numbers in TIER_MAP.md.
fail_under = 0
show_missing = true
skip_covered = false
precision = 2
exclude_also = [
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@overload",
    "pragma: no cover",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

[tool.coverage.json]
output = "coverage.json"

[tool.mutmut]
# Phase 1.2 will run this against the Tier 0 list below — see AUDIT_BASELINE.md §3.
paths_to_mutate = [
    "squash/oms_signer.py",
    "squash/anchor.py",
    "squash/attest.py",
    "squash/slsa.py",
    "squash/chain_attest.py",
]
runner = "python -m pytest -x -q"
tests_dir = "tests/"
